<fix> some swagger bugs
